package game.itemsystem;

public class Inventory {

}
