@startuml items_inventory_capture
skinparam style strictuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

skinparam class {
    BackgroundColor #F8FAFC
    BorderColor #64748B
    FontColor #0F172A
}

skinparam class<<abstract>> {
    BackgroundColor #FFF7ED
    BorderColor #C2410C
    FontColor #9A3412
}

skinparam class<<interface>> {
    BackgroundColor #ECFEFF
    BorderColor #0F766E
    FontColor #115E59
}

skinparam class<<enum>> {
    BackgroundColor #EEF2FF
    BorderColor #4338CA
    FontColor #312E81
}

package "game.items" {
    abstract class Item <<abstract>> #FFF7ED {
        -name: String
        -description: String
        -battleUsable: Boolean
        -basePrice: Integer
        +canUse(target: Pokemon) Boolean
        +use(target: Pokemon) ActionResult
    }

    abstract class HealingItem <<abstract>> #FFF7ED {
        -healAmount: Integer
        +canUse(target: Pokemon) Boolean
        +use(target: Pokemon) ActionResult
    }

    class HpHealItem #F8FAFC {
        +use(target: Pokemon) ActionResult
    }

    class StatusHealItem #F8FAFC {
        -curedStatusNames: Set<String>
        +canUse(target: Pokemon) Boolean
        +use(target: Pokemon) ActionResult
    }

    class CaptureItem #F8FAFC {
        -captureModifier: Double
        +canUse(target: Pokemon) Boolean
        +computeCatchChance(target: Pokemon) Double
        +use(target: Pokemon) ActionResult
    }

    class Inventory #F8FAFC {
        -stacks: Map<Item, ItemStack>
        +count(item: Item) Integer
        +has(item: Item, amount: Integer) Boolean
        +add(item: Item, amount: Integer) void
        +consume(item: Item, amount: Integer) Boolean
    }

    class ItemStack #F8FAFC {
        -item: Item
        -amount: Integer
        +increase(amount: Integer) void
        +decrease(amount: Integer) void
        +canConsume(amount: Integer) Boolean
    }
}

package "game.commerce" {
    interface Seller <<interface>> #ECFEFF {
        +listItemsForSale() List<ItemStack>
    }

    class NpcSeller #F8FAFC {
        -displayName: String
        -catalog: List<Item>
        +listItemsForSale() List<ItemStack>
    }

    class ShopService #F8FAFC {
        -buyMultiplier: Double
        -sellMultiplier: Double
        +buyItem(player: Player, seller: Seller, item: Item, amount: Integer) ActionResult
        +sellItem(player: Player, seller: Seller, item: Item, amount: Integer) ActionResult
        +calculatePrice(item: Item, adjustment: Double) Integer
    }
}

package "game.shared" {
    interface Interactable <<interface>> #ECFEFF {
        +onInteract(player: Player) void
    }
}

package "game.battle" {
    class Trainer #F8FAFC
    class WildTrainer #F8FAFC
    class NpcTrainer #F8FAFC
    class BattleContext #F8FAFC
    class ItemAction #F8FAFC
    enum ActionResult <<enum>> #EEF2FF
}

package "game.player" {
    class Player #F8FAFC
}

package "game.creature" {
    class Pokemon #F8FAFC
}

Item <|-- HealingItem
HealingItem <|-- HpHealItem
HealingItem <|-- StatusHealItem
Item <|-- CaptureItem

Inventory *-- ItemStack
ItemStack --> Item
Trainer *-- Inventory

Interactable <|-- Seller
Interactable <|.. NpcTrainer

Seller <|.. NpcSeller
NpcSeller o-- "1..*" Item : catalog
ShopService --> Seller
ShopService --> Item
ShopService --> Inventory
ShopService --> Player

ItemAction --> Inventory : consume item
ItemAction --> Item : execute use
ItemAction --> Pokemon : target
CaptureItem ..> BattleContext : reads current battle context
CaptureItem ..> WildTrainer : only capturable in wild battle
CaptureItem --> Pokemon : capture target

note right of CaptureItem
Capture is an ItemAction:
the CaptureItem itself validates battle context
and computes capture chance.
end note

note right of ShopService
Commerce rules:
- price = basePrice * (1 + adjustment)
- For buying: adjustment = 0.10
- For selling: adjustment = -0.10
Seller keeps unlimited stock for listed items.
end note

note right of NpcSeller
NpcSeller and NpcTrainer are disjoint roles.
An NPC cannot be both at the same time.
Interaction entry is similar (approach + interact input),
but seller flow opens shop and trainer flow starts battle.
end note

@enduml
